<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">0000-HelenaShow</string>
    <string name="title_node_detail">Node Detail</string>
 	<string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Gateway address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="addr">MAC</string>
    <string name="number">Count</string>
    
    <string name="label_last_seen">Last Seen</string>
    
    <string name="observed_device">Observed device</string>
     <string name="label_observer">Observer: </string>
    
    <string name="observation_time">Observation time</string>
    <string name="empty"></string>


</resources>
