<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textColor="@color/blue4"
            android:textSize="18sp" />

        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:textSize="18sp" />

    </LinearLayout>
    
        <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_last_seen"
            android:textColor="@color/blue4"
            android:textSize="18sp" />

        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/last_seen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/redbrown"
            android:textSize="18sp" />

    </LinearLayout>

     
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addr"
        android:textColor="@color/brown"
        android:textSize="18sp" />

 <Space android:layout_width="120dp"
       android:layout_height="wrap_content"/>

<!--    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/number"
       android:textColor="@color/green"
       android:textSize="18sp" />
   
 <Space android:layout_width="20dp"
       android:layout_height="wrap_content"/> -->

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
android:text="@string/label_last_seen"
     android:textColor="@color/blue3"
     android:textSize="18sp" />
</LinearLayout>     
    
       
 <View style="@style/Divider"/>       
    <ListView
        android:id="@+id/observation_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 >

    </ListView>
</LinearLayout>
