<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey1"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textColor="@color/blue4"
            android:textSize="18sp" />

        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textColor="@color/blue4"
            android:textSize="18sp" />

        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textColor="@color/redbrown"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/header_columt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/brown"
        android:textSize="18sp" />

 <Space android:layout_width="120dp"
       android:layout_height="wrap_content"/>

   <TextView
       android:id="@+id/header_columt_2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"

       android:textColor="@color/green"
       android:textSize="18sp" />
   
 <Space android:layout_width="20dp"
       android:layout_height="wrap_content"/>

 <TextView
     android:id="@+id/header_columt_3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"

     android:textColor="@color/blue3"
     android:textSize="18sp" />
</LinearLayout>

    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_margin="0dp"
        android:orientation="horizontal" >

        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
    </LinearLayout>
<View style="@style/Divider"/>
    <ListView
        android:id="@+id/fire_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawSelectorOnTop="true" 
        android:transcriptMode="alwaysScroll">

    </ListView>

</LinearLayout>